--- a/src/components/Currency/Currency.module.css
+++ b/src/components/Currency/Currency.module.css
@@ -76,7 +76,6 @@
   color: #fbfbfb;
   background-color: rgba(74, 86, 226, 0.1);
   margin-top: 32px;
-  margin-left: auto;
   margin-right: auto;
   border-radius: 0;
 }
